--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"chart.js": "^4.0.1",
 		"firebase": "^9.14.0",
+		"js-cookie": "^3.0.1",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^5.0.1",
 		"react-dom": "^18.2.0",
