--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"firebase": "^9.14.0",
+		"js-cookie": "^3.0.1",
 		"react": "^18.2.0",
+		"react-confirm-alert": "^3.0.6",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.3",
 		"react-scripts": "5.0.1",
