--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"firebase": "^9.14.0",
 		"js-cookie": "^3.0.1",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.0.1",
 		"react-confirm-alert": "^3.0.6",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.3",
