--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,12 @@
 			"src": "logo512.png",
 			"type": "image/png",
 			"sizes": "512x512"
+		},
+		{
+			"src": "maskable_icon.png",
+			"type": "image/png",
+			"sizes": "192x192",
+			"purpose": "any maskable"
 		}
 	],
 	"start_url": ".",
